fix avatar overflow

--- a/src/css/components/_vcard.scss
+++ b/src/css/components/_vcard.scss
@@ -139,6 +139,7 @@ img.avatar{
 	display: inline-block;
 	border-radius: 50%;
 	vertical-align: middle;
+	overflow:hidden;
 }
 
 .ltr .vcard .avatar{
